--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -3,6 +3,7 @@
     <style name="Theme.AppTheme.Immerse" parent="Theme.AppTheme.NoActionBar">
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">@bool/use_light_status_bar</item>
-        <item name="android:navigationBarColor">@color/nav_bar_scrim</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightNavigationBar">@bool/use_light_nav_bar</item>
     </style>
 </resources>
